# TriTueNhanTao_UTE

./: Bài 3.docx  HomeWork3.docx  PuzzleUI.py  Puzzle_UI.rar  Tuan1_Buoi1.rar  bt5.xlsx  week5.py
Puzzle_Tuan1/: Game.py  config.py  main.py  player_scores.jsonl  text.txt  ui.py  ui_design.py
Puzzle_UI/: ui.py
Puzzle_YuuBin/: README.md  pyproject.toml
Puzzle_YuuBin/src/: __init__.py
Puzzle_YuuBin/src/puzzle/: game.py  main.py  settings.py
Puzzle_YuuBin/src/puzzle/core/: __init__.py  board.py  title.py  utils.py
Puzzle_YuuBin/src/puzzle/ui/: __init__.py  menu.py  play.py  settings_ui.py
Tuan1_Buoi1/: Bai1.py  Bai2.py  Bai3.py  Bai4.py  Bai5.py  text.txt
Tuan1_Buoi2/: DoThi.py  LapPtBac3.py  LapPtBac4.py  MatrixNhanAB.cpp  NhanAB.py  NhanABnumpy.py  ptbacn.txt  test.py
